<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.SettingActivity">

    <ImageButton
        android:id="@+id/imageButtonHome"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:contentDescription="@string/indicateMenu_off"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homelist_off" />

    <TextView
        android:id="@+id/textViewTypePlant"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginBottom="160dp"
        android:scrollbarSize="5dp"
        android:text="@string/type_plant"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/imageButtonConnect"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        android:background="@color/white"
        android:clickable="false"
        android:contentDescription="@string/istConnect_on"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/isconnect_off" />

    <ImageButton
        android:id="@+id/imageButtonSetting"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:clickable="false"
        android:contentDescription="@string/setting_off"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settinglist" />

    <TextView
        android:id="@+id/textViewUserNamePlant"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="275dp"
        android:text="@string/user_name_plant"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="320dp"
        android:backgroundTint="@color/black"
        android:text="@string/change_setting_text_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>