<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.ConnectActivity">

    <ImageButton
        android:id="@+id/imageButtonConnect"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        android:background="@color/white"
        android:clickable="false"
        android:contentDescription="@string/istConnect_on"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/is_tconnect" />

    <ImageButton
        android:id="@+id/imageButtonHome"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:contentDescription="@string/indicateMenu_off"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homelist_off" />

    <ImageButton
        android:id="@+id/imageButtonSetting"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:contentDescription="@string/setting_off"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settinglist_off" />

    <EditText
        android:id="@+id/editTextForConnection"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:inputType="text"
        android:shadowColor="@color/black"
        android:text="@string/ip_text"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/ip_text" />

    <Button
        android:id="@+id/buttonSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="320dp"
        android:backgroundTint="@color/black"
        android:text="@string/connect_text_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>