<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.SettingChangerActivity">

    <EditText
        android:id="@+id/editTextUserNamePlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/user_name_plant"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTypePlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/type_plant"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserNamePlant" />

    <ImageButton
        android:id="@+id/imageButtonSave"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:contentDescription="@string/save_button"
        android:scaleType="centerInside"
        android:src="@drawable/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/back_to_setting_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ViewPlants"
        android:layout_width="300sp"
        android:layout_height="350sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSetting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTypePlant" />

</androidx.constraintlayout.widget.ConstraintLayout>