<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonHome">

        <LinearLayout
            android:id="@+id/ScrollLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_plant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="@string/user_name_plant"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/PlantInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">

                <TextView
                    android:id="@+id/type_plant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_plant"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/category_plant"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/category_plant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_plant"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/type_plant"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/PlantClymate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">

                <TextView
                    android:id="@+id/info_climate_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_text_climate_condition"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/climate_condition"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/climate_condition"
                    android:layout_width="175sp"
                    android:layout_height="wrap_content"
                    android:text="@string/climate_condition"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/info_climate_condition"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/info_temperature_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="@string/temperature_range"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/PlantTemperatureRange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10sp">

                <TextView
                    android:id="@+id/min_temperature_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cur_temperature_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cur"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/max_temperature_range"
                    app:layout_constraintStart_toEndOf="@+id/min_temperature_range"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/max_temperature_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/InfoPlantTemperatureRange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10sp">

                <TextView
                    android:id="@+id/info_min_temperature_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/info_max_temperature_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="max"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/info_light_intensity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="@string/light_intensity"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/PlantLightIntensity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10sp">

                <TextView
                    android:id="@+id/min_light_intensity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cur_light_intensity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cur"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/max_light_intensity"
                    app:layout_constraintStart_toEndOf="@+id/min_light_intensity"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/max_light_intensity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/InfoPlantLightIntensity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10sp">

                <TextView
                    android:id="@+id/info_min_light_intensity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/info_max_light_intensity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="max"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/PlantSoilMoisture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">

                <TextView
                    android:id="@+id/info_soil_moisture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_text_soil_moisture"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/soil_moisture"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/soil_moisture"
                    android:layout_width="175sp"
                    android:layout_height="wrap_content"
                    android:text="@string/soil_moisture"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/info_soil_moisture"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/PlantSoilNutrients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">

                <TextView
                    android:id="@+id/info_soil_nutrients"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/info_text_soil_nutrients"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/soil_nutrients"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/soil_nutrients"
                    android:layout_width="175sp"
                    android:layout_height="wrap_content"
                    android:text="@string/soil_nutrients"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/info_soil_nutrients"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButtonHome"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:clickable="false"
        android:contentDescription="@string/indicateMenu_on"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homelist" />

    <ImageButton
        android:id="@+id/imageButtonSetting"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:contentDescription="@string/setting_off"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settinglist_off" />

    <ImageButton
        android:id="@+id/imageButtonConnect"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        android:background="@color/white"
        android:contentDescription="@string/istConnect_off"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/isconnect_off" />
</androidx.constraintlayout.widget.ConstraintLayout>